// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$autoload should work for API 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "💿 - Loading API initializer from /home/whoami/my-whook-project/src/services/API.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/services/API",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "API",
    "path": "/home/whoami/my-whook-project/src/services/API",
  },
}
`;

exports[`$autoload should work for a config constant 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
  ],
  "requireCalls": Array [],
  "result": Object {
    "initializer": [Function],
    "name": "CONFIG",
    "path": "internal://CONFIG",
  },
}
`;

exports[`$autoload should work for configs 1`] = `
Object {
  "injectorCalls": Array [],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "💿 - Loading CONFIGS initializer from /home/whoami/my-whook-project/src/services/CONFIGS.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/services/CONFIGS",
    ],
  ],
  "result": Object {
    "initializer": Object {
      "CONFIG": Object {
        "testConfig": "test",
      },
    },
    "name": "CONFIGS",
    "path": "/home/whoami/my-whook-project/src/services/CONFIGS",
  },
}
`;

exports[`$autoload should work for handlers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "💿 - Loading getPing initializer from /home/whoami/my-whook-project/src/handlers/getPing.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing",
  },
}
`;

exports[`$autoload should work for handlers hash 1`] = `
Object {
  "HANDLERS": Object {
    "getPing": [Function],
  },
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
    Array [
      Array [
        "API",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
  ],
  "requireCalls": Array [],
  "result": Object {
    "initializer": [Function],
    "name": "HANDLERS",
    "path": "internal://HANDLERS",
  },
}
`;

exports[`$autoload should work for wrapped handlers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
    Array [
      Array [
        "WRAPPERS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "💿 - Loading getPingWrapped initializer from /home/whoami/my-whook-project/src/handlers/getPing.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPingWrapped",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing",
  },
}
`;

exports[`$autoload should work with no wrappers 1`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "debug",
      "💿 - Loading getPing initializer from /home/whoami/my-whook-project/src/handlers/getPing.",
    ],
  ],
  "requireCalls": Array [
    Array [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": Object {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing",
  },
}
`;
